service worker: Gate eager CacheStorage setup behind a feature flag.

This will enable us to disable the optimization via a field trial kill
switch if needed.

Bug: 854905
Change-Id: Ic312cbedd7685761a45fee986061767b14295afa
Reviewed-on: https://chromium-review.googlesource.com/1139457
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Matt Falkenhagen <falken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575566}