third_party/blink/common/features.cc
@@ -8,6 +8,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace blink {
 namespace features {
 
+// Enable eagerly setting up a CacheStorage interface pointer and
+// passing it to service workers on startup as an optimization.
+const base::Feature kEagerCacheStorageSetupForServiceWorkers{
+    "EagerCacheStorageSetupForServiceWorkers",
+    base::FEATURE_ENABLED_BY_DEFAULT};
+
 // Enable LayoutNG.
 const base::Feature kLayoutNG{"LayoutNG", base::FEATURE_DISABLED_BY_DEFAULT};
 
